# nolimix86

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md
src/: CMakeLists.txt  asm-parser.cc  asm-parser.hh  common.hh  nolimia32.cc  nolimix86.cc  program.cc  program.hh  streamer.cc  streamer.hh
src/ast/: all.hh  apply-visitor.hh  apply-visitor.hxx  ast.cc  ast.hh  basic-block.cc  basic-block.hh  default-visitor.hh  default-visitor.hxx  fwd.hh  instr-base.cc  instr-base.hh  instr.cc  instr.hh  instr.hxx  instructions.hh  instructions.hxx  operand.cc  operand.hh  operand.hxx  pretty-printer.cc  pretty-printer.hh  program.cc  program.hh  visitor.hh  visitor.hxx
src/misc/: meta.hh
src/parser/: asm-parser.cc  streamer.cc
src/vm/: allocator.hh  allocator.hxx  cpu.cc  cpu.hh  memory.hh  memory.hxx  mmu.hh  mmu.hxx  vm.hh  vm.hxx
src/x86/: flags.hh  instructions.hh  registers.hh  x86.hh  yaml.hh
tests/: CMakeLists.txt  gen-test.py  test.py
tests/good/: add-mr.s  add-rr.s  addl-tm.s  imul-ir.s  imul-rr.s  lea-mr.s  mov-ir.s  mov-mr.s  movl-im.s  movl-mt.s  movl-rm.s  movl-tt.s  sub-rr.s  subl-tt.s
tests/suite/: CMakeLists.txt  gen-test.py  test.py
tests/suite/cpu/: default.out  default.s  leave.out  leave.s  loop.out  loop.s  recursive.out  recursive.s  stdout.out  stdout.s
tests/suite/good/: add-ir.out  add-mr.out  add-rr.out  add-rr.s  add-tr.out  addl-im.out  addl-im.s  addl-it.out  addl-it.s  addl-mt.out  addl-mt.s  addl-rm.out  addl-rm.s  addl-rt.out  addl-rt.s  addl-tm.out  addl-tm.s  addl-tt.out  addl-tt.s  call.out  cmp-ir.out  cmp-mr.out  cmp-rr.out  cmp-tr.out  cmpl-im.out  cmpl-im.s  cmpl-it.out  cmpl-it.s  cmpl-mt.out  cmpl-mt.s  cmpl-rm.out  cmpl-rm.s  cmpl-rt.out  cmpl-rt.s  cmpl-tm.out  cmpl-tm.s  cmpl-tt.out  cmpl-tt.s  forward-label.s  idiv-r.out  (+122 more)
tests/tests/good/: add-ir.s  add-tr.s  addl-im.s  addl-it.s  addl-mt.s  addl-reg.s  addl-temp.s  addl-tt.s  imul-it.s  imul-mt.s  imul-rt.s  lea-reg.s  lea-temp.s  mov-rr.s  mov-rt.s  mov-tr.s  movl-it.s  movl-ri.s  movl-tm.s  movzbl-reg.s  push-reg.s  pushl-reg.s  pushl-temp.s  ret-imm.s  sal-ir.s  sar-ir.s  shl-ir.s  sub-ir.s  sub-mr.s  sub-tr.s  subl-im.s  subl-mt.s  subl-rm.s  subl-tm.s
tests/unit/: CMakeLists.txt  allocator.cc  ast.cc  mmu.cc  test.py  vm.cc
